fixed active progress bar

--- a/PAM/Views/NewRequest/NewRequest.cshtml
+++ b/PAM/Views/NewRequest/NewRequest.cshtml
@@ -9,7 +9,7 @@
   ViewData["Title"] = "New Request";
 }
 
-<body>
+<body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
   <div class="text-center">
     <p style="font-size: 30px;"> Is this request for yourself? </br> or for another individual? </p>
