--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -139,7 +139,7 @@ input.invalid {
         color: #000;
     }
 
-        .progressbar a:before {
+        .progressbar li:before {
             width: 30px;
             height: 30px;
             content: counter(step);
@@ -153,7 +153,7 @@ input.invalid {
             background-color: white;
         }
 
-        .progressbar a:after {
+        .progressbar li:after {
             width: 100%;
             height: 2px;
             content: '';
@@ -164,19 +164,19 @@ input.invalid {
             z-index: -1;
         }
 
-        .progressbar a:first-child:after {
+        .progressbar li:first-child:after {
             content: none;
         }
 
-        .progressbar a.active {
+        .progressbar li.active {
             color: green;
         }
 
-            .progressbar a.active:before {
+            .progressbar li.active:before {
                 border-color: #55b776;
             }
 
-            .progressbar a.active + a:after {
+            .progressbar li.active + li:after {
                 background-color: #55b776;
             }
 /*----------------------------------------------------------
