completed progress bar & added logout modal

--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -2,14 +2,15 @@
 <hr>
 <div class="progressbar-container">
   <ul class="progressbar">
-    <a asp-action="CreateRequester"><li class="step">Self or For</li></a>
-    <a asp-action="SelfInfo"><li class="step">Requester(s) Information</li></a>
-    <a asp-action="RequestType"><li class="step">Request Type</li></a>
-    <a asp-action=""><li class="step">Unit Selection</li></a>
-    <a asp-action=""><li class="step">System Selection</li></a>
-    <a asp-action="RequestInfo"><li class="step">Request Information</li></a>
-    <a asp-action="Supervisors"><li class="step">Supervisors</li></a>
-    <a asp-action="Review"><li class="step">Review</li></a>
+
+    <li class="step"><a asp-action="CreateRequester">Self or For</a></li>
+    <li class="step"><a asp-action="SelfInfo">Requester(s) Information</a></li>
+    <li class="step"><a asp-action="RequestType">Request Type</a></li>
+    <li class="step"><a asp-action="">Unit Selection</a></li>
+    <li class="step"><a asp-action="">System Selection</a></li>
+    <li class="step"><a asp-action="RequestInfo">Request Information</a></li>
+    <li class="step"><a asp-action="Supervisors">Supervisors</a></li>
+    <li class="step"><a asp-action="Review">Review</a></li>
   </ul>
 </div>
 <hr>
