--- a/PAM/Views/NewRequest/RequestType.cshtml
+++ b/PAM/Views/NewRequest/RequestType.cshtml
@@ -6,7 +6,7 @@
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @{
   var requester = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("Requester");
-  ViewData["Title"] = "Request Type Information";
+  ViewData["Title"] = "Request Type";
 }
 
 <body onload="javascript: stepIndicate()">
@@ -14,7 +14,7 @@
   <form asp-controller="NewRequest" asp-action="RequestInfo" method="get">
     <div class="shadow-container">
       <div class="alert alert-info">
-        Step 3 = Select The Type of Request
+        Step 3 - Select The Type of Request
       </div>
       <div class="form-group">
         <div class="custom-control custom-radio">
