--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -6,7 +6,7 @@
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="NewRequest" asp-action="CreateRequest">
       <div class="alert alert-info">
-        Please confirm that all information is correct.
+        Step 8 - Please confirm that all information is correct.
       </div>
       <div class="alert alert-success">
         Step 1 - Self or For 
