--- a/PAM/Views/NewRequest/RequestInfo.cshtml
+++ b/PAM/Views/NewRequest/RequestInfo.cshtml
@@ -11,7 +11,7 @@
 
 <body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="NewRequest" asp-action="Supervisors" method="get">
+  <form asp-controller="NewRequest" asp-action="RequestInfo" method="post">
     <div class="shadow-container">
       <div class="alert alert-info">
         Step 6 - Additional Request Information
@@ -59,7 +59,7 @@
         </fieldset>
       </div>
     </div>
-    <button type="submit" class="btn btn-info float-right m-3" onclick="stepIndicate(4)"> Next </button>
+    <button type="submit" class="btn btn-info float-right m-3"> Next </button>
   </form>
   <form asp-controller="RequestType" asp-action="RequestType" method="get">
     <button type="submit" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
