--- a/PAM/Views/NewRequest/Supervisors.cshtml
+++ b/PAM/Views/NewRequest/Supervisors.cshtml
@@ -4,7 +4,7 @@
 
 <body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="NewRequest" asp-action="Review" method="get">
+  <form asp-controller="NewRequest" asp-action="Review" method="post">
     <div class="alert alert-info">
       Step 7 - Select the supervisor(s) to review this request.
     </div>
