Routed from requestType to SelectUnit

--- a/PAM/Views/NewRequest/SelectUnit.cshtml
+++ b/PAM/Views/NewRequest/SelectUnit.cshtml
@@ -3,7 +3,7 @@
 <body>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     @*<link href="~/lib/bootstrap-treeview/dist/css/bootstrap-treeview.min.css" rel="stylesheet" />*@
-    <partial name="_ProgressBar.cshtml" />
+    <partial name="../Shared/_ProgressBar.cshtml" />
     <form asp-controller="SelectUnit" asp-action="">
         <h2>Unit Select Test</h2>
         <div id="tree"></div>
