changed self/for implementation

--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -1,10 +1,10 @@
-﻿<p style="font-size: 40px;" class="text-center">New Registration</p>
+﻿<p style="font-size: 40px;" class="text-center">New Registration Request Form</p>
 <hr>
 <div class="progressbar-container">
   <ul class="progressbar">
 
     <li class="step"><a asp-action="CreateRequester">Self or For</a></li>
-    <li class="step"><a asp-action="SelfInfo">Requester(s) Information</a></li>
+    <li class="step"><a asp-action="RequesterInfo">Requester(s) Information</a></li>
     <li class="step"><a asp-action="RequestType">Request Type</a></li>
     <li class="step"><a asp-action="">Unit Selection</a></li>
     <li class="step"><a asp-action="">System Selection</a></li>
