--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -10,40 +10,40 @@
   <title>PAM - @ViewData["Title"]</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PAM</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Units" asp-action="Index">Units</a></li>
-                    <li><a asp-area="" asp-controller="Bureaus" asp-action="Index">Bureaus</a></li>
-                    <li><a asp-area="" asp-controller="Systems" asp-action="Index">Systems</a></li>
-                    <li><a asp-area="" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
+  @*<<<<<<< HEAD
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PAM</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+          <li><a asp-area="" asp-controller="Units" asp-action="Index">Units</a></li>
+          <li><a asp-area="" asp-controller="Bureaus" asp-action="Index">Bureaus</a></li>
+          <li><a asp-area="" asp-controller="Systems" asp-action="Index">Systems</a></li>
+          <li><a asp-area="" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
 
-                </ul>
-            </div>
-        </div>
-    </nav>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <partial name="_CookieConsentPartial" />
-=======
+  <partial name="_CookieConsentPartial" />
+  =======*@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <img src="~/images/ProbBadge.png" style="width: 90px;  padding-right: 1em;" />
     <i class="navbar-brand" href="" style="color:gold;"> Probation <br /> Access <br /> Manager </i>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
->>>>>>> branlam/master
+  
 
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
@@ -51,13 +51,13 @@
           <a class="nav-link" href="/Request/Self">Requests</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="">Users</a>
+          <a class="nav-link " href="">Users</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Reports</a>
+          <a class="nav-link" href="">Reports</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Organization</a>
+          <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Welcome">Management</a>
         </li>
       </ul>
     </div>
@@ -90,6 +90,36 @@
             </li>
           </ul>
         </nav>
+        <br />
+        <!-- this is where I should show my Location/Bureau/Uints/Systems Navigation-->
+        <nav class="navbar navbar-dark bg-dark" style="border-radius:7px;">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Locations">Locations Manager</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Bureaus">Bureaus Manager</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Units">Units Manager</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Systems">Systems Manager</a>
+            </li>
+          </ul>
+
+        </nav>
+
+
+
+
+
         <form asp-controller="Account" asp-action="Logout" method="post">
           <button type="submit" class="btn btn-secondary" style="border-radius: 7px; margin-top: 20px; width: 100%;">Logout</button>
         </form>
@@ -108,5 +138,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="~/js/w3autocomplete.js"></script>
   <script src="~/js/scripts.js"></script>
-  </body>
+</body>
 </html>
