Functionality to retrieve UnitSystems dependent on UnitId selected

--- a/PAM/Views/NewRequest/SelectUnit.cshtml
+++ b/PAM/Views/NewRequest/SelectUnit.cshtml
@@ -2,7 +2,7 @@
 <body onload="javascript: stepIndicate()">
   <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="SelectUnit" asp-action="Index" method="post">
+  <form asp-controller="SelectUnit" asp-action="PickUnit" method="post">
     <div class="shadow-container">
       <div class="alert alert-info">
         Step 4 - Select The Type of Job
