managment for Systems and Locations implemented done

--- a/PAM/Views/Systems1/DetailsSystem.cshtml
+++ b/PAM/Views/Systems1/DetailsSystem.cshtml
@@ -6,17 +6,10 @@
 
 <h2>Details</h2>
 
-
 <div>
-    <h4>Bureau</h4>
+    <h4>System</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.SystemId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SystemId)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -35,9 +28,9 @@
         <dd>
             @Html.DisplayFor(model => model.Owner)
         </dd>
-        <dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Retired)
-        </dd>
+        </dt>
         <dd>
             @Html.DisplayFor(model => model.Retired)
         </dd>
