--- a/PAM/Views/Systems1/Systems.cshtml
+++ b/PAM/Views/Systems1/Systems.cshtml
@@ -1,21 +1,17 @@
 ﻿@model IEnumerable<PAM.Models.System>
+
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
-----------------------------------
 
-----------------------------------
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.SystemId)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -32,12 +28,8 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
+@foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SystemId)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -56,6 +48,6 @@
                 <a asp-action="Delete" asp-route-id="@item.SystemId">Delete</a>
             </td>
         </tr>
-        }
+}
     </tbody>
 </table>
