--- a/PAM/Views/Locations/DeleteLocation.cshtml
+++ b/PAM/Views/Locations/DeleteLocation.cshtml
@@ -1,4 +1,4 @@
-﻿@model PAM.Models.System
+﻿@model PAM.Models.Location
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>System</h4>
+    <h4>Location</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -18,27 +18,33 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Address)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Owner)
+            @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Owner)
+            @Html.DisplayFor(model => model.City)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Retired)
+            @Html.DisplayNameFor(model => model.State)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Retired)
+            @Html.DisplayFor(model => model.State)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Zip)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Zip)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="SystemId" />
+        <input type="hidden" asp-for="LocationId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
