--- a/PAM/Views/Systems1/DeleteSystem.cshtml
+++ b/PAM/Views/Systems1/DeleteSystem.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PAM.Models.System
+
 @{
     ViewData["Title"] = "Delete";
 }
@@ -11,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.SystemId)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
@@ -19,16 +20,23 @@
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Owner)
+        </dt>
         <dd>
             @Html.DisplayFor(model => model.Owner)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Retired)
         </dt>
-
+        <dd>
+            @Html.DisplayFor(model => model.Retired)
+        </dd>
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="SystemId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
