some comments and fixes

--- a/PAM/Views/SelectUnit/SelectSystems.cshtml
+++ b/PAM/Views/SelectUnit/SelectSystems.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="" asp-action="" method="">
+  <form asp-controller="SelectUnit" asp-action="SystemSelected" method="post">
     <div class="shadow-container">
       <div class="alert alert-info">
         Step 5 - Default Systems Associated with Unit
