removed unnecessary controllers, implemented some bootstrap to the management pages

--- a/PAM/Views/Management/Bureaus.cshtml
+++ b/PAM/Views/Management/Bureaus.cshtml
@@ -19,7 +19,7 @@
     <a asp-action="CreateBureau">Create New</a>
   </p>
   <table class="table table-hover">
-    <thead>
+    <thead class="thead-dark">
       <tr>
         <th>
           @Html.DisplayNameFor(model => model.Code)
