--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -10,33 +10,7 @@
   <title>PAM - @ViewData["Title"]</title>
 </head>
 <body>
-  @*<<<<<<< HEAD
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PAM</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-          <li><a asp-area="" asp-controller="Units" asp-action="Index">Units</a></li>
-          <li><a asp-area="" asp-controller="Bureaus" asp-action="Index">Bureaus</a></li>
-          <li><a asp-area="" asp-controller="Systems" asp-action="Index">Systems</a></li>
-          <li><a asp-area="" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
 
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <partial name="_CookieConsentPartial" />
-  =======*@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <img src="~/images/ProbBadge.png" style="width: 90px;  padding-right: 1em;" />
     <i class="navbar-brand" href="" style="color:gold;"> Probation <br /> Access <br /> Manager </i>
@@ -57,7 +31,7 @@
           <a class="nav-link" href="">Reports</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Welcome">Management</a>
+          <a class="nav-link" href="/Management/WelcomePage">Managment</a>
         </li>
       </ul>
     </div>
