--- a/PAM/Views/SelectUnit/SelectSystems.cshtml
+++ b/PAM/Views/SelectUnit/SelectSystems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PAM.Models.System>
+﻿@model IEnumerable<PAM.Models.UnitSystem>
 
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -13,13 +13,13 @@
         Step 5 - Default Systems Associated with Unit
       </div>
       <table class="table table-hover">
-        <thead>
+        <thead class="thead-dark">
           <tr>
             <th>
-              @Html.DisplayNameFor(model => model.Name)
+              @Html.DisplayNameFor(model => model.System.Name)
             </th>
             <th>
-              @Html.DisplayNameFor(model => model.Description)
+              @Html.DisplayNameFor(model => model.System.Description)
             </th>
           </tr>
         </thead>
@@ -28,10 +28,10 @@
           {
             <tr>
               <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.System.Name)
               </td>
               <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.System.Description)
               </td>
             </tr>
           }
