pre-filled form data if available

--- a/PAM/Views/NewRequest/Supervisors.cshtml
+++ b/PAM/Views/NewRequest/Supervisors.cshtml
@@ -12,7 +12,7 @@
       <label>Supervisors</label>
       <input id="adEmployees" type="text" placeholder="Supervisor" autocomplete="off">
     </div>
-    <input type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-primary"> Next </button>
   </form>
 </body>
 
