fixed step routing per button

--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -8,7 +8,7 @@
 
 <body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="NewRequest" asp-action="CreateRequest">
+  <form asp-controller="NewRequest" asp-action="CreateRequest" method="post">
     <div class="alert alert-warning">
       Please confirm that all information is correct.
     </div>
