--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -6,7 +6,7 @@
     <li class="step"><a asp-action="CreateRequester">Self or For</a></li>
     <li class="step"><a asp-action="RequesterInfo">Requester(s) Information</a></li>
     <li class="step"><a asp-action="RequestType">Request Type</a></li>
-    <li class="step"><a asp-action="">Unit Selection</a></li>
+    <li class="step"><a asp-action="PickUnit">Unit Selection</a></li>
     <li class="step"><a asp-action="">System Selection</a></li>
     <li class="step"><a asp-action="RequestInfo">Request Information</a></li>
     <li class="step"><a asp-action="Supervisors">Supervisors</a></li>
