--- a/PAM/Views/SelectUnit/SelectSystems.cshtml
+++ b/PAM/Views/SelectUnit/SelectSystems.cshtml
@@ -1,10 +1,14 @@
 ﻿@model IEnumerable<PAM.Models.System>
 
+@{
+     ViewData["Title"] = "System Selection";
+}
+
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
 </head>
+
 <body onload="javascript: stepIndicate()">
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="SelectUnit" asp-action="SystemSelected" method="post">
@@ -40,7 +44,7 @@
     </div>
     <button type="submit" class="btn btn-info float-right m-3"> Next </button>
   </form>
-  <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
+  <form asp-controller="SelectUnit" asp-action="PickUnit" method="get">
     <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
   </form>
   <form asp-controller="Draft">
