--- a/PAM/Views/SelectUnit/SelectUnit.cshtml
+++ b/PAM/Views/SelectUnit/SelectUnit.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@{
+     ViewData["Title"] = "Unit Selection";
+}
 <body onload="javascript: stepIndicate()">
-  <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="SelectUnit" asp-action="PickUnit" method="post">
     <div class="shadow-container">
@@ -12,8 +13,8 @@
     <input id="selectedUnit" name="selectedUnit" type="hidden" value="" />
     <button type="submit" class="btn btn-info float-right m-3"> Next </button>
   </form>
-  <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
-    <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+  <form asp-controller="NewRequest" asp-action="RequestType" method="get">
+    <button type="submit" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
   </form>
   <form asp-controller="Draft">
     <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
