Changed appUrl and initial creation of EmailApprover method

--- a/PAM/Views/Email/Test.cshtml
+++ b/PAM/Views/Email/Test.cshtml
@@ -1,2 +1,1 @@
-﻿
-<p>An email was sent to @ViewData["Receipient"] with subject @ViewData["Subject"]</p>
+﻿<p>An email was sent to @ViewData["Receipient"] with subject @ViewData["Subject"]</p>
