Fix to properly update progress bar in Select Unit/System

--- a/PAM/Views/SelectUnit/SelectUnit.cshtml
+++ b/PAM/Views/SelectUnit/SelectUnit.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{
+  ViewData["Title"] = "Unit Selection";
+}
+
 <body onload="javascript: stepIndicate()">
   <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <partial name="../Shared/_ProgressBar.cshtml" />
