--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -3,31 +3,32 @@
     Layout = "_LoginLayout";
 }
 <body>
-    <div class="bg-display">
-        <div class="login-container">
-            <div class="logo">
-                <img src="~/Images/ProbBadge.png" alt="LA COUNTY PROBATION LOGO" />
-            </div>
-            <span class="login-title"> Probation Access Manager </span>
+  <div class="bg-display">
+    <div class="login-container">
+      <div class="login-form">
+        <div class="logo">
+          <img src="~/Images/ProbBadge.png" alt="LA COUNTY PROBATION LOGO" />
 
-            <form asp-controller="Account" asp-action="Login" method="post" >
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input name="username" class="form-control" placeholder="Username" data-val-required="Username is required." />
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input name="password" class="form-control" type="password" data-val-required="Password is required." placeholder="Password" />
-                </div>
-                <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
-            </form>
-            @if(Model != null)
-            {
-                <p class="text-danger">@Model.Message</p>
-            }
         </div>
+        <span class="login-title"> Probation Access Manager </span>
+
+        <form asp-controller="Account" asp-action="Login" method="post">
+          <div class="input-container">
+            <input name="username" class="input100" placeholder="Username" data-val-required="Username is required." />
+          </div>
+          <div class="input-container">
+            <input name="password" class="input100" type="password" data-val-required="Password is required." placeholder="Password" />
+          </div>
+          <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
+        </form>
+        @if (Model != null)
+        {
+          <p class="text-danger">@Model.Message</p>
+        }
+      </div>
     </div>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
+  </div>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
 </body>
