Get more properties from AD
. Expanded Employee to use more properties from AD.
. Renamed some properties in Requester to match properties in Employee  so it's easier to use AutoMapper.
. Added code to make it easier to convert among Employee, Requester, and ClaimsIdentity.

--- a/PAM/Views/NewRequest/RequesterInfo.cshtml
+++ b/PAM/Views/NewRequest/RequesterInfo.cshtml
@@ -22,11 +22,11 @@
       <div class="form-row">
         <div class="form-group col-md-5">
           <label for="countyDeptName">Agency Name</label>
-          <input asp-for="Department" type="text" class="form-control" id="countyDeptName" placeholder="Ex. Probation">
+          <input asp-for="Service" type="text" class="form-control" id="countyDeptName" placeholder="Ex. Probation">
         </div>
         <div class="form-group col-md-2">
           <label for="countyDeptNum">Dept. #</label>
-          <input asp-for="DepartmentCode" type="text" class="form-control" id="countyDeptNum" placeholder="Dept. #">
+          <input asp-for="Department" type="text" class="form-control" id="countyDeptNum" placeholder="Dept. #">
         </div>
       </div>
       <hr />
@@ -47,25 +47,25 @@
       <div class="form-row">
         <div class="form-group col-md-4">
           <label for="workAddr">Address</label>
-          <input asp-for="WorkAddress" type="text" class="form-control" id="workAddr" placeholder="1234 Main Street">
+          <input asp-for="Address" type="text" class="form-control" id="workAddr" placeholder="1234 Main Street">
         </div>
         <div class="form-group col-md-4">
           <label for="workCity">City</label>
-          <input asp-for="WorkCity" type="text" class="form-control" id="workCity" placeholder="Los Angeles">
+          <input asp-for="City" type="text" class="form-control" id="workCity" placeholder="Los Angeles">
         </div>
         <div class="form-group col-md-1">
           <label for="workState">State</label>
-          <input asp-for="WorkState" type="text" class="form-control" id="workState" placeholder="CA">
+          <input asp-for="State" type="text" class="form-control" id="workState" placeholder="CA">
         </div>
         <div class="form-group col-md-3">
           <label for="workZip">Zip Code</label>
-          <input asp-for="WorkZip" type="text" class="form-control" id="workZip" placeholder="90056">
+          <input asp-for="Zip" type="text" class="form-control" id="workZip" placeholder="90056">
         </div>
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="locationPhoneNum">Employee Location Phone #</label>
-          <input asp-for="WorkPhone" type="text" class="form-control" id="locationPhoneNum" placeholder="(_ _ _) _ _ _ - _ _ _ _">
+          <input asp-for="Phone" type="text" class="form-control" id="locationPhoneNum" placeholder="(_ _ _) _ _ _ - _ _ _ _">
         </div>
         <div class="form-group col-md-6">
           <label for="employeeCellNum">Employee Cell Phone #</label>
