--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -40,21 +40,21 @@
     <div class="form-group row">
       <label class="col-sm-1 col-form-label">Address</label>
       <div class="col-sm-3">
-        <input class="form-control" value="@requester.WorkAddress" disabled />
+        <input class="form-control" value="@requester.Address" disabled />
       </div>
       <label class="col-sm-1 col-form-label">State</label>
       <div class="col-sm-1">
-        <input class="form-control" value="@requester.WorkState" disabled />
+        <input class="form-control" value="@requester.State" disabled />
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-1 col-form-label">City</label>
       <div class="col-sm-2">
-        <input class="form-control" value="@requester.WorkCity" disabled />
+        <input class="form-control" value="@requester.City" disabled />
       </div>
       <label class="col-sm-1 col-form-label">ZipCode</label>
       <div class="col-sm-2">
-        <input class="form-control" value="@requester.WorkZip" disabled />
+        <input class="form-control" value="@requester.Zip" disabled />
       </div>
     </div>
     <div class="alert alert-success">
