more changes to login

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
           <a class="nav-link" href="">Reports</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Management/WelcomePage">Managment</a>
+          <a class="nav-link" href="/Management/WelcomePage">Management</a>
         </li>
       </ul>
         <form asp-controller="Account" asp-action="Logout" method="post">
