--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Login";
-    Layout = "_LoginLayout";
+  ViewData["Title"] = "Login";
+  Layout = "_LoginLayout";
 }
 <body>
   <div class="bg-display">
@@ -14,17 +14,18 @@
 
         <form asp-controller="Account" asp-action="Login" method="post">
           <div class="input-container">
-            <input name="username" class="input100" placeholder="Username" data-val-required="Username is required." />
+            <input name="username" class="input-edit" placeholder="Username" data-val-required="Username is required." />
           </div>
           <div class="input-container">
-            <input name="password" class="input100" type="password" data-val-required="Password is required." placeholder="Password" />
+            <input name="password" class="input-edit" type="password" data-val-required="Password is required." placeholder="Password" />
           </div>
           <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
+          @if (Model != null)
+          {
+            <p class="text-danger">@Model.Message</p>
+          }
+          <p style="text-align:center; color:white; padding-top: 10px;">&copy; Copyright 2018-2019. Los Angeles County. </p>
         </form>
-        @if (Model != null)
-        {
-          <p class="text-danger">@Model.Message</p>
-        }
       </div>
     </div>
   </div>
