--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -22,7 +22,7 @@ label {
     [ Background for Login ]
 */
 .bg-display {
-    background-image: url("../Images/la.jpg");
+    background-image: url("../Images/losangeles.jpg");
     width: 100%;
     min-height: 100vh;
     justify-content: flex-end;
@@ -72,32 +72,9 @@ label {
   width: 500px;
   border-radius: 10px;
   overflow: hidden;
-  padding: 55px 55px 37px 55px;
-  background: linear-gradient(to bottom, #1cb5e0 0%, #000046 80%);
-  background: -webkit-linear-gradient(to bottom, #1cb5e0 0%, #000046 80%);
-}
-
-.input-container{
-  width: 100%;
-  position: relative;
-  color:#fff;
-  border-bottom: 2px solid rgba(255,255,255, 1.0);
-  margin-bottom: 30px;
-}
-
-.input100 {
-  border:none;
-  outline:none;
-  font-size: 16px;
-  color: #FFF;
-  width: 100%;
-  height: 45px;
-  background: transparent;
-  padding: 0 5px 0 5px;
-}
-
-.input100::placeholder {
-  color:white;
+  padding: 55px 55px 10px 55px;
+  background: linear-gradient(to bottom, #434343 0%, #000000 100%);
+  background: -webkit-linear-gradient(to bottom, #434343 0%, #000000 100%);
 }
 
 .logo img {
@@ -110,6 +87,29 @@ label {
   text-align: center;
   display: block;
   padding-bottom: 5%;
+}
+
+.input-container{
+  width: 100%;
+  position: relative;
+  color:white;
+  border-bottom: 2px solid rgba(255,255,255, 1.0);
+  margin-bottom: 30px;
+}
+
+.input-edit{
+  border:none;
+  outline:none;
+  font-size: 16px;
+  color: white;
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  padding: 0 5px 0 5px;
+}
+
+.input-edit::placeholder {
+  color:white;
 }
 /*----------------------------------------------------------
     [ Main Content Styling ]
