--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -6,8 +6,8 @@
     <li class="step"><a asp-action="CreateRequester">Self or For</a></li>
     <li class="step"><a asp-action="RequesterInfo">Requester(s) Information</a></li>
     <li class="step"><a asp-action="RequestType">Request Type</a></li>
-    <li class="step"><a asp-action="PickUnit">Unit Selection</a></li>
-    <li class="step"><a asp-action="">System Selection</a></li>
+    <li class="step"><a asp-action="SelectUnit">Unit Selection</a></li>
+    <li class="step"><a asp-action="SelectSystems">System Selection</a></li>
     <li class="step"><a asp-action="RequestInfo">Request Information</a></li>
     <li class="step"><a asp-action="Supervisors">Supervisors</a></li>
     <li class="step"><a asp-action="Review">Review</a></li>
