seperated Management into Bureau, Unit, Location, and System as well as their Views

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
           <a class="nav-link" href="">Reports</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Management/WelcomePage">Managment</a>
+          <a class="nav-link" href="/Bureau/WelcomePage">Managment</a>
         </li>
       </ul>
     </div>
@@ -69,22 +69,22 @@
         <nav class="navbar navbar-dark bg-dark" style="border-radius:7px;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Locations">Locations Manager</a>
+              <a class="nav-link" asp-area="" asp-controller="Location" asp-action="Locations">Locations Manager</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Bureaus">Bureaus Manager</a>
+              <a class="nav-link" asp-area="" asp-controller="Bureau" asp-action="Bureaus">Bureaus Manager</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Units">Units Manager</a>
+              <a class="nav-link" asp-area="" asp-controller="Unit" asp-action="Units">Units Manager</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" asp-area="" asp-controller="Management" asp-action="Systems">Systems Manager</a>
+              <a class="nav-link" asp-area="" asp-controller="System" asp-action="Systems">Systems Manager</a>
             </li>
           </ul>
 
