added a welcome page

--- a/PAM/Views/Account/Welcome.cshtml
+++ b/PAM/Views/Account/Welcome.cshtml
@@ -2,7 +2,11 @@
      ViewData["Title"] = "Welcome";
 }
 <body>
-<div class="jumbotron">
-  <h1> Welcome </h1>
+<div class="jumbotron text-center" style="background:transparent;">
+  <h1> Welcome to the Probation Access Manager (PAM) </h1>
+  <hr />
+  <p> Veniam commodo quis ex eiusmod cupidatat duis nisi ea ex tempor proident. Consectetur officia quis reprehenderit deserunt eu nisi aliqua proident sit eu reprehenderit qui cupidatat qui. Officia consectetur culpa adipisicing incididunt commodo officia eiusmod. Pariatur ea qui occaecat quis quis dolor aute. Anim Lorem enim proident ea exercitation proident eu proident exercitation magna.</p>
+  <hr />
+  <p> Veniam commodo quis ex eiusmod cupidatat duis nisi ea ex tempor proident. Consectetur officia quis reprehenderit deserunt eu nisi aliqua proident sit eu reprehenderit qui cupidatat qui. Officia consectetur culpa adipisicing incididunt commodo officia eiusmod. Pariatur ea qui occaecat quis quis dolor aute. Anim Lorem enim proident ea exercitation proident eu proident exercitation magna.</p>
 </div>
 </body>
